--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <title>Rock-Paper-Scissors</title>
 </head>
     <body>
-       <script src="script.js"></script> 
+        <div class="intro">
+            <h1>Rock Paper Scissors</h1>
+            <h1>Current Score:0</h1>
+        </div>
+        <script src="script.js"></script> 
     </body>
 </html>
