Add game choices

--- a/index.html
+++ b/index.html
@@ -7,7 +7,21 @@
     <body>
         <div class="intro">
             <h1>Rock Paper Scissors</h1>
-            <h1>Current Score:0</h1>
+            <h1>Please click on any of the choices</h1>
+            <div class="result">
+            </div>
+        </div>
+        <div class="game-container">
+            <div class="choice-container">
+                <div class="choice" id="player-rock"></div>
+                <div class="choice" id="player-paper"></div>
+                <div class="choice" id="player-scissor"></div>
+            </div>
+            <div class="choice-container">
+                <div class="choice" id="comp-rock"></div>
+                <div class="choice" id="comp-paper"></div>
+                <div class="choice" id="comp-scissors"></div>
+            </div>
         </div>
         <script src="script.js"></script> 
     </body>
