Add Score HTML elements

--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
         <div class="intro">
             <h1>Rock Paper Scissors</h1>
             <h1>Please click on any of the choices</h1>
-            <div class="result">
+            <div class="result-container">
+                <h2 class="result" id="player-score">Your-Score:</h2>
+                <h2 class="result" id="comp-score">Computer-Score:</h2>
+        
             </div>
         </div>
         <div class="game-container">
