Add ID to player choices

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             </div>
         </div>
         <div class="game-container">
-            <div class="choice-container">
+            <div class="choice-container" id="player-choices">
                 <div class="choice" id="player-rock"></div>
                 <div class="choice" id="player-paper"></div>
                 <div class="choice" id="player-scissor"></div>
