Add play-choice to class attribute

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
         </div>
         <div class="game-container">
             <div class="choice-container" id="player-choices">
-                <div class="choice" id="player-rock"></div>
-                <div class="choice" id="player-paper"></div>
-                <div class="choice" id="player-scissor"></div>
+                <div class="choice player-choice" id="player-rock"></div>
+                <div class="choice player-choice" id="player-paper"></div>
+                <div class="choice player-choice" id="player-scissor"></div>
             </div>
             <div class="choice-container">
                 <div class="choice" id="comp-rock"></div>
