Add images for choices

--- a/index.html
+++ b/index.html
@@ -16,14 +16,26 @@
         </div>
         <div class="game-container">
             <div class="choice-container" id="player-choices">
-                <div class="choice player-choice" id="player-rock"></div>
-                <div class="choice player-choice" id="player-paper"></div>
-                <div class="choice player-choice" id="player-scissor"></div>
+                <div class="choice player-choice" id="player-rock">
+                    <img src="./images/rock.png" alt="Rock">
+                </div>
+                <div class="choice player-choice" id="player-paper">
+                    <img src="./images/paper.png" alt="paper">
+                </div>
+                <div class="choice player-choice" id="player-scissor">
+                    <img src="/images/scissors.png" alt="scissors">
+                </div>
             </div>
             <div class="choice-container">
-                <div class="choice" id="comp-rock"></div>
-                <div class="choice" id="comp-paper"></div>
-                <div class="choice" id="comp-scissors"></div>
+                <div class="choice" id="comp-rock">
+                    <img src="./images/rock.png" alt="Rock">
+                </div>
+                <div class="choice" id="comp-paper">
+                    <img src="./images/paper.png" alt="paper">
+                </div>
+                <div class="choice" id="comp-scissors">
+                    <img src="/images/scissors.png" alt="scissors">
+                </div>
             </div>
         </div>
         <script src="script.js"></script> 
