Fix source URL for scissor img

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <img src="./images/paper.png" alt="paper">
                 </div>
                 <div class="choice player-choice" id="player-scissor">
-                    <img src="/images/scissors.png" alt="scissors">
+                    <img src="./images/scissors.png" alt="scissors">
                 </div>
             </div>
             <div class="choice-container">
@@ -34,7 +34,7 @@
                     <img src="./images/paper.png" alt="paper">
                 </div>
                 <div class="choice" id="comp-scissors">
-                    <img src="/images/scissors.png" alt="scissors">
+                    <img src="./images/scissors.png" alt="scissors">
                 </div>
             </div>
         </div>
