--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <div class="intro">
             <h1>Rock Paper Scissors</h1>
             <h1>Please click on any of the choices</h1>
+            <h2 id="outcome"></h2>
             <div class="result-container">
                 <h2 class="result" id="player-score">Your-Score:</h2>
                 <h2 class="result" id="comp-score">Computer-Score:</h2>
@@ -23,7 +24,7 @@
                 <div class="choice player-choice" id="player-paper">
                     <img src="./images/paper.png" alt="paper">
                 </div>
-                <div class="choice player-choice" id="player-scissor">
+                <div class="choice player-choice" id="player-scissors">
                     <img src="./images/scissors.png" alt="scissors">
                 </div>
             </div>
